--- a/index.html
+++ b/index.html
@@ -1,11 +1,51 @@
-<div>
-    <h1>
-        Three things I hope to gain from this course:
-    </h1>
-    <ol>
-        <li>An understanding of how to problem-solve and think computationally</li>
-        <li>An introduction into coding and computer science</li>
-        <li>An introduction into engineering and engineering principals</li>
-    <ol>
-<div>
-    
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Pearce Jordan's Portfolio Page</title>
+    <link rel="icon" type="image/png" href="favicon.png" />
+</head>
+<body>
+    <a target="_blank" href="https://icons8.com/icon/q8JzU370iMtb/ouroboros">Ouroboros</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
+    <div>
+        <img src="profilepic.jpg" width="400" />
+    </div>
+    <div>
+        <h2>About Me</h2>
+        <p>I am a mechanical engineering student at Oregon State University Cascades, having transferred from Portland Community College. I’ve always been interested in engineering, and have taken multiple steps to involve myself in the engineering world, including participation in programs like the ACE mentorship program. I have a particular interest in research and development of new energy systems technology.</p>
+    </div>
+    <div>
+        <h2>Experience</h2>
+        <p>I have some relevant experience through the aforementioned ACE mentorship program and my education, but outside of that I’m fairly new to the professional world of engineering and am excited to bring a fresh perspective to the table.</p>
+    </div>
+    <div>
+        <h2>Skills</h2>
+        <p>I have an understanding of how to use relevant rendering programs such as AutoCAD, through engineering classes at Portland Community College. I am currently learning skills such as how to operate Excel and write with Python through online courses.</p>
+    </div>
+    <div>
+        <h2>Projects</h2>
+        <p>One project I’ve worked on with peers was to redesign an unused property on the Willamette river in downtown Portland Oregon, creating plans for a ferry dock. This project was interesting because the original buildings on site were considered historical, meaning they couldn’t be demolished and the project needed to be integrated into the existing structures.</p>
+    </div>
+    <div>
+        <h2>My Repositories</h2>
+        <p>Github: <a href="https://github.com/PearceJordan/PearceJordan.github.io/commit/b80b887418401c12ed40a70dbeadd12e86ee9e7f" target="_blank"> Click Here!</a></p>
+    </div>
+    <div>
+        <h2>Education</h2>
+        <p>Associate of Arts Oregon Transfer from PCC
+            Currently studying mechanical engineering at OSU
+            Completion of the ACE mentorship program </p>
+    </div>
+    <div>
+        <h2>Awards</h2>
+        <p>I earned my associates degree from PCC with presidential honors, and am currently a member of the NSLS. </p>
+    </div>
+    <div>
+        <h2>Social Media</h2>
+        <p>Social Media: <a href="https://www.linkedin.com/in/pearce-jordan-51a809332/" target="_blank"> LinkedIn </a></p>
+    </div>
+    <div>
+        <h2>Contact Me</h2>
+        <p>Email: <a href="mailto:pjb.jordan@gmail.com" target="_blank">pjb.jordan@gmail.com</a></p>
+    </div>
+</body>
+</html>
