--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <title>Pearce Jordan's Portfolio Page</title>
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <a target="_blank" href="https://icons8.com/icon/q8JzU370iMtb/ouroboros">Ouroboros</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
     <div>
-        <img src="profilepic.jpg" width="400" />
+        <img id="profilepic" src="profilepic.jpg" />
     </div>
     <div>
         <h2>About Me</h2>
