updated website with bootstrap

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <title>Pearce Jordan's Portfolio Page</title>
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
+    <div class="card m-2" style="width: 20rem;">
+        <img src="profilepic.jpg" class="card-img-top" alt="My profile picture">
+        <div class="card-body">
+          <h5 class="card-title">About Me</h5>
+          <p class="card-text">I am a mechanical engineering student at Oregon State University Cascades, having transferred from Portland Community College. I’ve always been interested in engineering, and have taken multiple steps to involve myself in the engineering world, including participation in programs like the ACE mentorship program. I have a particular interest in research and development of new energy systems technology.</p>
+        </div>
+    </div>
     <a target="_blank" href="https://icons8.com/icon/q8JzU370iMtb/ouroboros">Ouroboros</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a>
-    <div>
-        <img id="profilepic" src="profilepic.jpg" />
-    </div>
-    <div>
-        <h2>About Me</h2>
-        <p>I am a mechanical engineering student at Oregon State University Cascades, having transferred from Portland Community College. I’ve always been interested in engineering, and have taken multiple steps to involve myself in the engineering world, including participation in programs like the ACE mentorship program. I have a particular interest in research and development of new energy systems technology.</p>
-    </div>
+    
     <div>
         <h2>Experience</h2>
         <p>I have some relevant experience through the aforementioned ACE mentorship program and my education, but outside of that I’m fairly new to the professional world of engineering and am excited to bring a fresh perspective to the table.</p>
@@ -48,5 +49,7 @@
         <h2>Contact Me</h2>
         <p>Email: <a href="mailto:pjb.jordan@gmail.com" target="_blank">pjb.jordan@gmail.com</a></p>
     </div>
+    <script src="./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js">
+    </script>
 </body>
 </html>
