updated colors and fonts

--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+        </style>
+        
     <div class="card m-2" style="width: 20rem;">
         <img src="profilepic.jpg" class="card-img-top" alt="My profile picture">
         <div class="card-body">
