--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     
   <main class="px-3">
     <h1>Pearce Jordan</h1>
-    <h4 class="lead">I'm a mechanical engineering student at Oregon State University Cascades who's passionate about clean energy systems.</h4>
+    <h5>I'm a mechanical engineering student at Oregon State University Cascades who's passionate about clean energy systems.</h5>
     <div>
     <p class="lead">
       <h4>Contact Me:</h4>
@@ -214,7 +214,7 @@
   </main>
     
   <footer class="mt-auto text-white-50">
-    <p>Footer text.</p>
+    <p>Have a good day.</p>
   </footer>
 </div>
 
